2004-03-06  Dodji Seketeli  <dodji@gnome.org>

	* csslint/csslint.c: applied a patch from Rob BUIS
	to fix some bugs/memleaks here.
	Did some cleanups too.
	* src/cr-sel-eng.c:
	(cr_sel_eng_get_matched_rulesets_real):
	handle the case where the sheet is empty (has no rules). That
	can happen ! (it actually happened to me during some tests).
	(put_css_properties_in_props_list):
	handle the !important keyword in the cascading algorithm.
	Rob BUIS (again) started this.

2004-03-05  Dodji Seketeli  <dodji@gnome.org>

	* csslint/csslint.c: 
	(parse_cmd_line) fixed silly bug in there.
	* src/cr-declaration.[ch],src/cr-om-parser.c,
	src/cr-parser.[ch],src/cr-statement.c,tests/test2-main.c,
	tests/test3-main.c: 
	added the support of the "!important"
	keyword at the parsing level.
	* tests/test-inputs/test4.1.css: update nr tests to reflect
	the new !important thing.
	* src/cr-sel-eng.c: 
	(put_css_properties_in_props_list): fix a small subtle
	bug in here. Selection engine is becoming more and more
	reliable ;).

2004-03-04  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-enc-handler.c:
	(cr_enc_handler_resolve_enc_alias): applied a patch
	from Kjartan Maraas to replace the g_strup() g_ascii_strup().
	This closes 
	* csslint/Makefile.am,src/cr-simple-sel.h,src/cr-term.h
	src/cr-token.h,tests/Makefile.am:
	Applied patch
	http://bugzilla.gnome.org/showattachment.cgi?attach_id=23422.
	Modified the patch a little bit so that I use prog_LDFLAGS instead
	of AM_LDFLAGS. AM_LDFLAGS just seems not to be supported by my
	automake-1.4.
	This fixes http://bugzilla.gnome.org/show_bug.cgi?id=131643 .
	* tests/test-output-refs/test4.2.css.out: updated this non
	regresstion test reference output due to a small modification
	in the @page rule dump format.

2004-03-03  Dodji Seketeli  <dodji@gnome.org>

	* csslint/csslint.c:
	(cssom_parse) put a '\n' after dumping the sheet on screen.
	* src/cr-parser.c:
	(cr_parser_parse_page): fixed a small bug in here.